# contextgc_poc

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: __init__.py  replay.py  run_benchmark.py  runner.py  specs.py  stats.py  strategies.py  tasks.py
benchmark/results/: latest_run.json  latest_run.md
benchmark/results/debugging_replay/: aggregate.csv  aggregate.json  audit_queue.jsonl  runs.jsonl  summary.md  transcripts.jsonl
benchmark/results/debugging_replay_v1_after_fix_v2/: aggregate.csv  aggregate.json  audit_queue.jsonl  runs.jsonl  summary.md  transcripts.jsonl
benchmark/results/latest/: aggregate.csv  aggregate.json  audit_queue.jsonl  runs.jsonl  summary.md
contextgc_barrier/: __init__.py  backend.py  barrier.py  chunker.py  demo.py  extractor.py  mlx_backend.py  registry.py  scorer.py  summary.py  wrapper.py
tests/: fake_backend.py  test_barrier.py  test_benchmark_matrix.py  test_integration.py  test_selection.py
