[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextgc-barrier"
version = "0.2.0"
description = "Active prompt compactor for LLM sessions that keeps cited context inside a fixed budget."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agents", "context", "memory", "mlx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "spacy>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]
mlx = ["mlx-lm>=0.29.1"]

[project.scripts]
contextgc-barrier-demo = "contextgc_barrier.demo:main"

[project.urls]
Repository = "https://github.com/pradeepsingh/contextgc-barrier"
